versions/0.8.0/_sources/refs/_aws-cdk_aws-directoryservice.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"yXacfIJR++C47dHfVi78w5+CU0q6qAycMj/2Vv9aDjI="}

@aws-cdk/aws-directoryservice
=============================

.. mdinclude:: ./__aws-cdk_aws-directoryservice.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-directoryservice

MicrosoftADAlias
^^^^^^^^^^^^^^^^

.. py:class:: MicrosoftADAlias([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

MicrosoftADDnsIpAddresses
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: MicrosoftADDnsIpAddresses([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

SimpleADAlias
^^^^^^^^^^^^^

.. py:class:: SimpleADAlias([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

SimpleADDnsIpAddresses
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SimpleADDnsIpAddresses([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-directoryservice.cloudformation

MicrosoftADResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: MicrosoftADResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``MicrosoftADResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``MicrosoftADResource``
   :type properties: :py:class:`~@aws-cdk/aws-directoryservice.cloudformation.MicrosoftADResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: microsoftAdAlias

      :type: :py:class:`~@aws-cdk/aws-directoryservice.MicrosoftADAlias` *(readonly)*


   .. py:attribute:: microsoftAdDnsIpAddresses

      :type: :py:class:`~@aws-cdk/aws-directoryservice.MicrosoftADDnsIpAddresses` *(readonly)*

   .. py:class:: VpcSettingsProperty



      .. py:attribute:: subnetIds

         ``MicrosoftADResource.VpcSettingsProperty.SubnetIds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-directoryservice-microsoftad-vpcsettings.html#cfn-directoryservice-microsoftad-vpcsettings-subnetids


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: vpcId

         ``MicrosoftADResource.VpcSettingsProperty.VpcId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-directoryservice-microsoftad-vpcsettings.html#cfn-directoryservice-microsoftad-vpcsettings-vpcid


         :type: string or :py:class:`@aws-cdk/cdk.Token`



MicrosoftADResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: MicrosoftADResourceProps



   .. py:attribute:: microsoftAdName

      ``AWS::DirectoryService::MicrosoftAD.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: password

      ``AWS::DirectoryService::MicrosoftAD.Password``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-password


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: vpcSettings

      ``AWS::DirectoryService::MicrosoftAD.VpcSettings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-vpcsettings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-directoryservice.cloudformation.MicrosoftADResource.VpcSettingsProperty`


   .. py:attribute:: createAlias

      ``AWS::DirectoryService::MicrosoftAD.CreateAlias``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-createalias


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: edition

      ``AWS::DirectoryService::MicrosoftAD.Edition``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-edition


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: enableSso

      ``AWS::DirectoryService::MicrosoftAD.EnableSso``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-enablesso


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: shortName

      ``AWS::DirectoryService::MicrosoftAD.ShortName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-shortname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


SimpleADResource
~~~~~~~~~~~~~~~~

.. py:class:: SimpleADResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SimpleADResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SimpleADResource``
   :type properties: :py:class:`~@aws-cdk/aws-directoryservice.cloudformation.SimpleADResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: simpleAdAlias

      :type: :py:class:`~@aws-cdk/aws-directoryservice.SimpleADAlias` *(readonly)*


   .. py:attribute:: simpleAdDnsIpAddresses

      :type: :py:class:`~@aws-cdk/aws-directoryservice.SimpleADDnsIpAddresses` *(readonly)*

   .. py:class:: VpcSettingsProperty



      .. py:attribute:: subnetIds

         ``SimpleADResource.VpcSettingsProperty.SubnetIds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-directoryservice-simplead-vpcsettings.html#cfn-directoryservice-simplead-vpcsettings-subnetids


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: vpcId

         ``SimpleADResource.VpcSettingsProperty.VpcId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-directoryservice-simplead-vpcsettings.html#cfn-directoryservice-simplead-vpcsettings-vpcid


         :type: string or :py:class:`@aws-cdk/cdk.Token`



SimpleADResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SimpleADResourceProps



   .. py:attribute:: simpleAdName

      ``AWS::DirectoryService::SimpleAD.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: password

      ``AWS::DirectoryService::SimpleAD.Password``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-password


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: size

      ``AWS::DirectoryService::SimpleAD.Size``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-size


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: vpcSettings

      ``AWS::DirectoryService::SimpleAD.VpcSettings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-vpcsettings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-directoryservice.cloudformation.SimpleADResource.VpcSettingsProperty`


   .. py:attribute:: createAlias

      ``AWS::DirectoryService::SimpleAD.CreateAlias``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-createalias


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::DirectoryService::SimpleAD.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: enableSso

      ``AWS::DirectoryService::SimpleAD.EnableSso``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-enablesso


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: shortName

      ``AWS::DirectoryService::SimpleAD.ShortName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-shortname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-directoryservice

