versions/0.8.1/_sources/refs/_aws-cdk_aws-directoryservice.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"ohV/UlF/uRc5wKAS09poNY1q1dvr9WQjBNso+C38zVA="}

@aws-cdk/aws-directoryservice
=============================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/directoryservice/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:directoryservice:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="directoryservice" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>directoryservice</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:directoryservice:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='directoryservice', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-directoryservice/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-directoryservice@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-directoryservice": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-directoryservice@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-directoryservice/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-directoryservice@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-directoryservice": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-directoryservice@0.8.1



.. mdinclude:: ./__aws-cdk_aws-directoryservice.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-directoryservice

MicrosoftADAlias
^^^^^^^^^^^^^^^^

.. py:class:: MicrosoftADAlias([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.directoryservice.MicrosoftADAlias;

      .. code-tab:: javascript

         const { MicrosoftADAlias } = require('@aws-cdk/aws-directoryservice');

      .. code-tab:: typescript

         import { MicrosoftADAlias } from '@aws-cdk/aws-directoryservice';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

MicrosoftADDnsIpAddresses
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: MicrosoftADDnsIpAddresses([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.directoryservice.MicrosoftADDnsIpAddresses;

      .. code-tab:: javascript

         const { MicrosoftADDnsIpAddresses } = require('@aws-cdk/aws-directoryservice');

      .. code-tab:: typescript

         import { MicrosoftADDnsIpAddresses } from '@aws-cdk/aws-directoryservice';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

SimpleADAlias
^^^^^^^^^^^^^

.. py:class:: SimpleADAlias([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.directoryservice.SimpleADAlias;

      .. code-tab:: javascript

         const { SimpleADAlias } = require('@aws-cdk/aws-directoryservice');

      .. code-tab:: typescript

         import { SimpleADAlias } from '@aws-cdk/aws-directoryservice';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

SimpleADDnsIpAddresses
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SimpleADDnsIpAddresses([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.directoryservice.SimpleADDnsIpAddresses;

      .. code-tab:: javascript

         const { SimpleADDnsIpAddresses } = require('@aws-cdk/aws-directoryservice');

      .. code-tab:: typescript

         import { SimpleADDnsIpAddresses } from '@aws-cdk/aws-directoryservice';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-directoryservice.cloudformation

MicrosoftADResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: MicrosoftADResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.directoryservice.cloudformation.MicrosoftADResource;

      .. code-tab:: javascript

         const { cloudformation.MicrosoftADResource } = require('@aws-cdk/aws-directoryservice');

      .. code-tab:: typescript

         import { cloudformation.MicrosoftADResource } from '@aws-cdk/aws-directoryservice';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``MicrosoftADResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``MicrosoftADResource``
   :type properties: :py:class:`~@aws-cdk/aws-directoryservice.cloudformation.MicrosoftADResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: microsoftAdAlias

      :type: :py:class:`~@aws-cdk/aws-directoryservice.MicrosoftADAlias` *(readonly)*


   .. py:attribute:: microsoftAdDnsIpAddresses

      :type: :py:class:`~@aws-cdk/aws-directoryservice.MicrosoftADDnsIpAddresses` *(readonly)*

   .. py:class:: VpcSettingsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.directoryservice.cloudformation.MicrosoftADResource.VpcSettingsProperty;

         .. code-tab:: javascript

            // cloudformation.MicrosoftADResource.VpcSettingsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.MicrosoftADResource.VpcSettingsProperty } from '@aws-cdk/aws-directoryservice';





      .. py:attribute:: subnetIds

         ``MicrosoftADResource.VpcSettingsProperty.SubnetIds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-directoryservice-microsoftad-vpcsettings.html#cfn-directoryservice-microsoftad-vpcsettings-subnetids


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: vpcId

         ``MicrosoftADResource.VpcSettingsProperty.VpcId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-directoryservice-microsoftad-vpcsettings.html#cfn-directoryservice-microsoftad-vpcsettings-vpcid


         :type: string or :py:class:`@aws-cdk/cdk.Token`



MicrosoftADResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: MicrosoftADResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.directoryservice.cloudformation.MicrosoftADResourceProps;

      .. code-tab:: javascript

         // cloudformation.MicrosoftADResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.MicrosoftADResourceProps } from '@aws-cdk/aws-directoryservice';





   .. py:attribute:: microsoftAdName

      ``AWS::DirectoryService::MicrosoftAD.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: password

      ``AWS::DirectoryService::MicrosoftAD.Password``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-password


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: vpcSettings

      ``AWS::DirectoryService::MicrosoftAD.VpcSettings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-vpcsettings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-directoryservice.cloudformation.MicrosoftADResource.VpcSettingsProperty`


   .. py:attribute:: createAlias

      ``AWS::DirectoryService::MicrosoftAD.CreateAlias``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-createalias


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: edition

      ``AWS::DirectoryService::MicrosoftAD.Edition``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-edition


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: enableSso

      ``AWS::DirectoryService::MicrosoftAD.EnableSso``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-enablesso


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: shortName

      ``AWS::DirectoryService::MicrosoftAD.ShortName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-microsoftad.html#cfn-directoryservice-microsoftad-shortname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


SimpleADResource
~~~~~~~~~~~~~~~~

.. py:class:: SimpleADResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.directoryservice.cloudformation.SimpleADResource;

      .. code-tab:: javascript

         const { cloudformation.SimpleADResource } = require('@aws-cdk/aws-directoryservice');

      .. code-tab:: typescript

         import { cloudformation.SimpleADResource } from '@aws-cdk/aws-directoryservice';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SimpleADResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SimpleADResource``
   :type properties: :py:class:`~@aws-cdk/aws-directoryservice.cloudformation.SimpleADResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: simpleAdAlias

      :type: :py:class:`~@aws-cdk/aws-directoryservice.SimpleADAlias` *(readonly)*


   .. py:attribute:: simpleAdDnsIpAddresses

      :type: :py:class:`~@aws-cdk/aws-directoryservice.SimpleADDnsIpAddresses` *(readonly)*

   .. py:class:: VpcSettingsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.directoryservice.cloudformation.SimpleADResource.VpcSettingsProperty;

         .. code-tab:: javascript

            // cloudformation.SimpleADResource.VpcSettingsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.SimpleADResource.VpcSettingsProperty } from '@aws-cdk/aws-directoryservice';





      .. py:attribute:: subnetIds

         ``SimpleADResource.VpcSettingsProperty.SubnetIds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-directoryservice-simplead-vpcsettings.html#cfn-directoryservice-simplead-vpcsettings-subnetids


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: vpcId

         ``SimpleADResource.VpcSettingsProperty.VpcId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-directoryservice-simplead-vpcsettings.html#cfn-directoryservice-simplead-vpcsettings-vpcid


         :type: string or :py:class:`@aws-cdk/cdk.Token`



SimpleADResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SimpleADResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.directoryservice.cloudformation.SimpleADResourceProps;

      .. code-tab:: javascript

         // cloudformation.SimpleADResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.SimpleADResourceProps } from '@aws-cdk/aws-directoryservice';





   .. py:attribute:: simpleAdName

      ``AWS::DirectoryService::SimpleAD.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: password

      ``AWS::DirectoryService::SimpleAD.Password``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-password


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: size

      ``AWS::DirectoryService::SimpleAD.Size``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-size


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: vpcSettings

      ``AWS::DirectoryService::SimpleAD.VpcSettings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-vpcsettings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-directoryservice.cloudformation.SimpleADResource.VpcSettingsProperty`


   .. py:attribute:: createAlias

      ``AWS::DirectoryService::SimpleAD.CreateAlias``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-createalias


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::DirectoryService::SimpleAD.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: enableSso

      ``AWS::DirectoryService::SimpleAD.EnableSso``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-enablesso


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: shortName

      ``AWS::DirectoryService::SimpleAD.ShortName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-directoryservice-simplead.html#cfn-directoryservice-simplead-shortname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-directoryservice

